[Chromium] Chromium Mac build fix after revision r127711 https://bugs.webkit.org/show_bug.cgi?id=95958

Unreviewed build fix.

This is a clear typo in the source file, so changing the function to
call locationModifiersFromWindowsKeyCode instead.

* src/mac/WebInputEventFactory.mm:
(WebKit::WebInputEventFactory::keyboardEvent):

Canonical link: https://commits.webkit.org/113816@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127714 268f45cc-cd09-0410-ab3c-d52691b4dbfc